<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MenuRegistar"
    android:background="@drawable/app_wallpaper"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/app_logo"
            android:contentDescription="@null"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/app_name"
            android:textColor="@color/colorApp"
            android:textSize="30sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        android:background="@color/backgroundAlphaWhite"
        android:orientation="vertical"
        android:padding="10dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:text="@string/login"
                android:textColor="@color/colorApp"
                android:textSize="22sp"
                android:onClick="onLogin"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/barra"
                android:textSize="22sp"
                android:textColor="@color/colorApp"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/registar"
                android:background="@android:color/transparent"
                android:textSize="30sp"
                android:textColor="@color/colorApp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="10dp"
            android:paddingBottom="15dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:textColor="@color/black"
                android:textSize="14sp"/>

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/digitarEmail"
                android:background="@android:color/transparent"
                android:paddingLeft="10dp"
                android:textSize="12sp"
                android:autofillHints="@string/email"
                android:inputType="textEmailAddress"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password"
                android:textColor="@color/black"
                android:textSize="14sp"/>

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/digitarPassword"
                android:background="@android:color/transparent"
                android:paddingLeft="10dp"
                android:textSize="12sp"
                android:autofillHints="@string/password"
                android:inputType="textPassword"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/confirmaPassword"
                android:textColor="@color/black"
                android:textSize="14sp"/>

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/digitarPassword"
                android:background="@android:color/transparent"
                android:paddingLeft="10dp"
                android:textSize="12sp"
                android:autofillHints="@string/password"
                android:inputType="textPassword"/>
        </LinearLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@color/colorApp"
            android:padding="5dp"
            android:text="@string/registar"
            android:textColor="@color/white" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:src="@drawable/isec_logo"
            android:contentDescription="@null"/>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>