<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:padding="10dp">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/sobreText"
            android:textAlignment="center"
            app:layout_constraintBottom_toTopOf="@+id/textView3"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginBottom="20dp"
            android:textColor="#FFFFFF"/>

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/docente"
            android:textAlignment="center"
            app:layout_constraintBottom_toTopOf="@+id/textView4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2"
            android:textColor="#FFFFFF"/>

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:text="@string/alunos"
            android:textAlignment="center"
            app:layout_constraintBottom_toTopOf="@+id/textView2"
            app:layout_constraintTop_toBottomOf="@+id/textView3"
            android:textColor="#FFFFFF"/>

        <Button
            android:id="@+id/bt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/ok"
            app:layout_constraintTop_toBottomOf="@+id/textView4"/>

    </android.support.constraint.ConstraintLayout>

</ScrollView>

