<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MenuEsqueceuPassword"
    android:background="@drawable/app_wallpaper"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/barraSuperior_MenuEsqueceu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/logoApp_MenuEsqueceu"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/app_logo"
            android:contentDescription="@null"/>

        <TextView
            android:id="@+id/nameApp_MenuEsqueceu"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/app_name"
            android:textColor="@color/colorApp"
            android:textSize="30sp"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/esqueceuMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/barraInferior_Esqueceu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/barraSuperior_MenuEsqueceu"
        android:background="@color/backgroundAlphaWhite"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:id="@+id/esqueceuTitulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/esqueciPassword"
            android:textSize="22sp"
            android:textColor="@color/colorApp"/>

        <LinearLayout
            android:id="@+id/esqueceuDadosMenu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="10dp"
            android:paddingBottom="15dp">

            <TextView
                android:id="@+id/textEmail_MenuEsqueceu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:textColor="@color/black"
                android:textSize="14sp"/>

            <EditText
                android:id="@+id/emailInput_MenuEsqueceu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/digitarEmail"
                android:background="@android:color/transparent"
                android:paddingLeft="10dp"
                android:textSize="12sp"
                android:inputType="textEmailAddress"
                android:autofillHints="@string/email"/>

        </LinearLayout>

        <Button
            android:id="@+id/botaoEnviarEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@color/colorApp"
            android:padding="5dp"
            android:text="@string/enviarEmail"
            android:textColor="@color/white" />

        <LinearLayout
            android:id="@+id/barraLigacoesLoginRegistar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="10dp"
            android:gravity="center_horizontal">

            <Button
                android:id="@+id/ligacaoLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@android:color/transparent"
                android:onClick="onLogin"
                android:text="@string/login"
                android:textColor="@color/blue"
                android:textSize="12sp" />

            <Button
                android:id="@+id/ligacaoRegistar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@android:color/transparent"
                android:onClick="onRegistar"
                android:text="@string/registarNovo"
                android:textColor="@color/blue"
                android:textSize="12sp" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/barraInferior_Esqueceu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:id="@+id/logoISEC_MenuEsqueceu"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:src="@drawable/isec_logo"
            android:contentDescription="@null"/>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>