<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MenuAlterarPassword"
    android:background="@drawable/app_wallpaper">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/barraSuperior_MenuAlterarPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/backArrow_MenuAlterarPassword"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:background="@android:color/transparent"
            android:contentDescription="@null"
            android:onClick="back"
            android:padding="8dp"
            android:scaleType="fitCenter"
            android:src="@drawable/back_arrow"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/titulo_MenuAlterarPassword"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:gravity="center_vertical"
            android:text="@string/menuAlterarPassword"
            android:textColor="@color/colorApp"
            android:textSize="30sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/logoApp_MenuAlterarPassword"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:layout_marginEnd="8dp"
            android:contentDescription="@null"
            android:src="@drawable/app_logo"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </android.support.constraint.ConstraintLayout>

    <LinearLayout
        android:id="@+id/alterarPasswordMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/barraSuperior_MenuAlterarPassword"
        android:background="@drawable/round_corner"
        android:orientation="vertical"
        android:padding="10dp">

        <LinearLayout
            android:id="@+id/alterarPasswordDadosMenu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="15dp"
            android:paddingRight="50dp">

            <TextView
                android:id="@+id/passAntiga_MenuAlterarPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/passAntigaTitle"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:textStyle="bold"/>

            <EditText
                android:id="@+id/passAntigaInput_MenuAlterarPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autofillHints="@string/password"
                android:background="@android:color/transparent"
                android:fontFamily="sans-serif"
                android:hint="@string/passAntigaPlaceholder"
                android:inputType="textPassword"
                android:paddingLeft="10dp"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/passNova_MenuAlterarPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/passNovaTitle"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:textStyle="bold"/>

            <EditText
                android:id="@+id/passNovaInput_MenuAlterarPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autofillHints="@string/password"
                android:background="@android:color/transparent"
                android:fontFamily="sans-serif"
                android:hint="@string/passNovaPlaceholder"
                android:inputType="textPassword"
                android:paddingLeft="10dp"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/confirmPass_MenuAlterarPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/confirmaPassword"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:textStyle="bold"/>

            <EditText
                android:id="@+id/confirmPassInput_MenuAlterarPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autofillHints="@string/password"
                android:background="@android:color/transparent"
                android:fontFamily="sans-serif"
                android:hint="@string/passNovaPlaceholder"
                android:inputType="textPassword"
                android:paddingLeft="10dp"
                android:textSize="12sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/erroMudarPass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:textColor="@color/red"
            android:textSize="12sp"
            android:visibility="gone" />

        <Button
            android:id="@+id/botaoAlterar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/round_corner_buttons"
            android:onClick="alterar"
            android:paddingLeft="10dp"
            android:paddingTop="5dp"
            android:paddingRight="10dp"
            android:paddingBottom="5dp"
            android:text="@string/alterar"
            android:textColor="@color/white" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>